--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -182,9 +182,6 @@
     <property name="maximum">
      <number>100</number>
     </property>
-    <property name="stepType">
-     <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
-    </property>
    </widget>
    <widget class="QSpinBox" name="spinBox_texte">
     <property name="geometry">
@@ -208,7 +205,7 @@
    <widget class="QSpinBox" name="spinBox_texte_2">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>350</x>
       <y>340</y>
       <width>71</width>
       <height>26</height>
@@ -257,9 +254,6 @@
     </property>
     <property name="maximum">
      <number>100</number>
-    </property>
-    <property name="stepType">
-     <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
     </property>
    </widget>
    <widget class="QComboBox" name="Select_Robot">
@@ -334,6 +328,16 @@
     </property>
     <property name="text">
      <string>Girar</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_texte_3">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>340</y>
+      <width>71</width>
+      <height>26</height>
+     </rect>
     </property>
    </widget>
   </widget>
