--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -186,8 +186,8 @@
    <widget class="QSpinBox" name="spinBox_texte">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>340</y>
+      <x>174</x>
+      <y>341</y>
       <width>71</width>
       <height>26</height>
      </rect>
@@ -338,6 +338,45 @@
       <width>71</width>
       <height>26</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>310</y>
+      <width>41</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ID</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>320</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V_Left</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>320</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V_Right</string>
     </property>
    </widget>
   </widget>
