algumas atualizações na função girar e criação do botão navegar

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -631,6 +631,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="navegar">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>280</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Navegar</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
