--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,7 +41,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>40</y>
+      <y>50</y>
       <width>261</width>
       <height>17</height>
      </rect>
@@ -61,52 +61,6 @@
     </property>
     <property name="text">
      <string>Write</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>140</y>
-      <width>111</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>140</y>
-      <width>67</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Enviado</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>170</y>
-      <width>111</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>170</y>
-      <width>67</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Recebido</string>
     </property>
    </widget>
    <widget class="QPushButton" name="CheckSerial_Button">
@@ -133,19 +87,6 @@
     </property>
     <property name="text">
      <string>Read</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="Baud_Rate">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>0</y>
-      <width>201</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Parâmetros da Comunicação</string>
     </property>
    </widget>
    <widget class="QSlider" name="verticalSlider_vel_R">
@@ -181,44 +122,6 @@
     </property>
     <property name="maximum">
      <number>100</number>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox_texte">
-    <property name="geometry">
-     <rect>
-      <x>174</x>
-      <y>341</y>
-      <width>71</width>
-      <height>26</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>-256</number>
-    </property>
-    <property name="maximum">
-     <number>256</number>
-    </property>
-    <property name="value">
-     <number>0</number>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox_texte_2">
-    <property name="geometry">
-     <rect>
-      <x>350</x>
-      <y>340</y>
-      <width>71</width>
-      <height>26</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>-100</number>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-    <property name="value">
-     <number>0</number>
     </property>
    </widget>
    <widget class="QSlider" name="verticalSlider_vel_L">
@@ -322,67 +225,12 @@
      <rect>
       <x>380</x>
       <y>250</y>
-      <width>89</width>
+      <width>121</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
      <string>Girar</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox_texte_3">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>340</y>
-      <width>71</width>
-      <height>26</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>-100</number>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>310</y>
-      <width>41</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>ID</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>320</y>
-      <width>67</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>V_Left</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>320</y>
-      <width>67</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>V_Right</string>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcdNumber_id">
@@ -636,12 +484,22 @@
      <rect>
       <x>380</x>
       <y>280</y>
-      <width>89</width>
+      <width>121</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
      <string>Navegar</string>
+    </property>
+   </widget>
+   <widget class="QCustomPlot" name="widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>10</y>
+      <width>291</width>
+      <height>171</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -666,6 +524,14 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
